- Change lambda permission

--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -198,11 +198,21 @@ Resources:
                   - logs:PutLogEvents
                 Resource:
                   - '*'
+        - PolicyName: KMSPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - kms:DescribeKey
+                Resource:
+                  - '*'
         - PolicyName: VaultBootstrapIAMPolicy
           PolicyDocument:
             Statement:
               - Effect: Allow
                 Action:
+                  - iam:GetRole
                   - iam:DeleteRolePolicy
                   - iam:PutRolePolicy
                 Resource:
@@ -217,56 +227,62 @@ Resources:
           import boto3
           
           def lambda_handler(event, context):
-            client = boto3.client('iam')
-            
-            # Get vault role info
-            vault_role = client.get_role(RoleName=event['ResourceProperties']['role_name'])['Role']
-            print("Retrive IAM Role ID: {0}".format(vault_role["RoleId"]))
-            
-            # Delete old Policies
-            inline_policies = ["VaultBootstrapIAMPolicy","VaultInstancesKMSPolicy","VaultSSMPolicy","VaultFilesBucketAccess"]
-            print("Trying to delete inline policies from {0} IAM Role".format(vault_role["RoleId"]))
-            for inline_policy in inline_policies:
-              try:
-                delete = client.delete_role_policy(RoleName=vault_role['RoleName'], PolicyName=inline_policy)
-                print("Delete policy: {0}".format(inline_policy))
-              except:
-                print("Didn\'t find policy: {0}".format(inline_policy))
-            print("Finish to delete inline policies from {0} IAM Role".format(vault_role["RoleId"]))
-            
-            # Get KMS ID
-            kms = boto3.client('kms', region_name=event['ResourceProperties']['region'])
-            kms_arn = kms.describe_key(KeyId="alias/vault/{0}".format(event['ResourceProperties']['instance']))['KeyMetadata']['Arn']
-            print("Retrive KMS ARN: {0}".format(kms_arn))
-            
-            # Create inline policy
-            kms_policy =  {
-              "Statement": [
-                {
-                  "Action": [
-                    "kms:Encrypt",
-                    "kms:Decrypt"
-                    ],
-                    "Resource":
-                      kms_arn,
-                    "Effect":
-                      "Allow"
-                }
-              ]
-            }
-            
-            response = client.put_role_policy(RoleName=vault_role['RoleName'], PolicyName="VaultInstancesKMSPolicy", PolicyDocument=json.dumps(kms_policy))
-            print("Add inline policy VaultInstancesKMSPolicy to {0} IAM Role".format(vault_role["RoleId"]))
+            try:
+              print("Start RemovePermissionLambda execution")
+              client = boto3.client('iam')
+              
+              # Get vault role info
+              vault_role = client.get_role(RoleName=event['ResourceProperties']['role_name'])['Role']
+              print("Retrive IAM Role ID: {0}".format(vault_role["RoleId"]))
+              
+              # Delete old Policies
+              inline_policies = ["VaultInstancesKMSPolicy","VaultSSMPolicy","VaultFilesBucketAccess"]
+              print("Trying to delete inline policies from {0} IAM Role".format(vault_role["RoleId"]))
+              for inline_policy in inline_policies:
+                try:
+                  delete = client.delete_role_policy(RoleName=vault_role['RoleName'], PolicyName=inline_policy)
+                  print("Delete policy: {0}".format(inline_policy))
+                except:
+                  print("Didn\'t find policy: {0}".format(inline_policy))
+              print("Finish to delete inline policies from {0} IAM Role".format(vault_role["RoleId"]))
+              
+              # Get KMS ID
+              kms = boto3.client('kms', region_name=event['ResourceProperties']['region'])
+              kms_arn = kms.describe_key(KeyId="alias/vault/{0}".format(event['ResourceProperties']['instance']))['KeyMetadata']['Arn']
+              print("Retrive KMS ARN: {0}".format(kms_arn))
+              
+              # Create inline policy
+              kms_policy =  {
+                "Statement": [
+                  {
+                    "Action": [
+                      "kms:Encrypt",
+                      "kms:Decrypt"
+                      ],
+                      "Resource":
+                        kms_arn,
+                      "Effect":
+                        "Allow"
+                  }
+                ]
+              }
+              
+              response = client.put_role_policy(RoleName=vault_role['RoleName'], PolicyName="VaultInstancesKMSPolicy", PolicyDocument=json.dumps(kms_policy))
+              print("Add inline policy VaultInstancesKMSPolicy to {0} IAM Role".format(vault_role["RoleId"]))
+              return(0)
+            except Exception as E:
+              print(E)
+              return(1)
       Runtime: python3.7
       Handler: index.lambda_handler
-      Timeout: 60
+      Timeout: 6
       Role: !GetAtt 'LambdaRemovePermissionsRole.Arn'
   RemovePermissionVault:
     Type: AWS::CloudFormation::CustomResource
     Version: '1.0'
     Properties:
       ServiceToken: !GetAtt 'RemovePermissionLambda.Arn'
-      role_name: !GetAtt 'StoreMasterPassword.Name'
+      role_name: !Ref 'VaultInstancesRole'
       instance: !Ref 'VaultMachine'
       region: !Ref 'AWS::Region'
   VaultInstancesProfile:
