--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -225,8 +225,13 @@ Resources:
         ZipFile: |-
           import json
           import boto3
+          import uuid
+          import cfnresponse
           
           def lambda_handler(event, context):
+            physicalResourceId = str(uuid.uuid4())
+            if 'PhysicalResourceId' in event:
+              physicalResourceId = event['PhysicalResourceId']
             try:
               print("Start RemovePermissionLambda execution")
               client = boto3.client('iam')
@@ -269,10 +274,10 @@ Resources:
               
               response = client.put_role_policy(RoleName=vault_role['RoleName'], PolicyName="VaultInstancesKMSPolicy", PolicyDocument=json.dumps(kms_policy))
               print("Add inline policy VaultInstancesKMSPolicy to {0} IAM Role".format(vault_role["RoleId"]))
-              return(0)
+              return cfnresponse.send(event, context, cfnresponse.SUCCESS, None, {}, physicalResourceId)
             except Exception as E:
               print(E)
-              return(1)
+              return cfnresponse.send(event, context, cfnresponse.FAILED,E,{}, physicalResourceId)
       Runtime: python3.7
       Handler: index.lambda_handler
       Timeout: 6
