--- a/aws/PAS-AIO-Deployment.yaml
+++ b/aws/PAS-AIO-Deployment.yaml
@@ -234,6 +234,129 @@ Resources:
       - LambdaDeployRole
       - StorePasswordLambda
       - ComponentsMachine
+  LambdaRemovePermissionsRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Policies:
+        - PolicyName: CloudWatch
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - logs:CreateLogGroup
+                  - logs:CreateLogStream
+                  - logs:DescribeLogGroups
+                  - logs:DescribeLogStreams
+                  - logs:PutLogEvents
+                Resource:
+                  - '*'
+        - PolicyName: KMSPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - kms:DescribeKey
+                Resource:
+                  - '*'
+        - PolicyName: VaultBootstrapIAMPolicy
+          PolicyDocument:
+            Statement:
+              - Effect: Allow
+                Action:
+                  - iam:GetRole
+                  - iam:DeleteRolePolicy
+                  - iam:PutRolePolicy
+                Resource:
+                  - !Sub 'arn:${AWS::Partition}:iam::${AWS::AccountId}:role/${AWS::StackName}-*'
+  RemovePermissionLambda:
+    Type: AWS::Lambda::Function
+    Properties:
+      Description: Change Policies of VaultInstancesRole IAM Role
+      Code:
+        ZipFile: |-
+          import json
+          import boto3
+          import uuid
+          import cfnresponse
+          
+          def lambda_handler(event, context):
+            physicalResourceId = str(uuid.uuid4())
+            if 'PhysicalResourceId' in event:
+              physicalResourceId = event['PhysicalResourceId']
+            try:
+              print("Start RemovePermissionLambda execution")
+              client = boto3.client('iam')
+              
+              # Get vault role info
+              vault_role = client.get_role(RoleName=event['ResourceProperties']['vault_role_name'])['Role']
+              print("Retrive IAM Role ID: {0}".format(vault_role["RoleId"]))
+              
+              # Get KMS ID
+              kms = boto3.client('kms', region_name=event['ResourceProperties']['region'])
+              kms_arn = kms.describe_key(KeyId="alias/vault/{0}".format(event['ResourceProperties']['instance']))['KeyMetadata']['Arn']
+              print("Retrive KMS ARN: {0}".format(kms_arn))
+              
+              # Create inline policy
+              kms_policy =  {
+                "Statement": [
+                  {
+                    "Action": [
+                      "kms:Encrypt",
+                      "kms:Decrypt"
+                      ],
+                      "Resource":
+                        kms_arn,
+                      "Effect":
+                        "Allow"
+                  }
+                ]
+              }
+              
+              response = client.put_role_policy(RoleName=vault_role['RoleName'], PolicyName="VaultInstancesKMSRestrictedPolicy", PolicyDocument=json.dumps(kms_policy))
+              print("Add inline policy VaultInstancesKMSRestrictedPolicy to {0} IAM Role".format(vault_role["RoleId"]))
+              
+              # Delete old Policies
+              list = [event['ResourceProperties']['vault_role_name'],event['ResourceProperties']['lambda_role_name']]
+              inline_policies = ["VaultInstancesKMSPolicy","VaultSSMPolicy","VaultFilesBucketAccess","KMSPolicy", "VaultBootstrapIAMPolicy"]
+              print("Trying to delete inline policies from {0} IAM Role".format(vault_role["RoleId"]))
+              for role in list:
+                print("Delete policies in {0} IAM Role".format(role))
+                for inline_policy in inline_policies:
+                  try:
+                    delete = client.delete_role_policy(RoleName=role, PolicyName=inline_policy)
+                    print("Delete policy: {0}".format(inline_policy))
+                  except:
+                    print("Didn\'t find policy: {0}".format(inline_policy))
+              print("Finish to delete inline policies from {0} IAM Role".format(vault_role["RoleId"]))
+              
+              return cfnresponse.send(event, context, cfnresponse.SUCCESS, None, {}, physicalResourceId)
+            except Exception as E:
+              print(E)
+              return cfnresponse.send(event, context, cfnresponse.FAILED,E,{}, physicalResourceId)
+      Runtime: python3.7
+      Handler: index.lambda_handler
+      Timeout: 60
+      Role: !GetAtt 'LambdaRemovePermissionsRole.Arn'
+  RemovePermissionVault:
+    Type: AWS::CloudFormation::CustomResource
+    Version: '1.0'
+    Properties:
+      ServiceToken: !GetAtt 'RemovePermissionLambda.Arn'
+      vault_role_name: !Ref 'VaultInstancesRole'
+      lambda_role_name: !Ref 'LambdaRemovePermissionsRole'
+      instance: !Ref 'VaultMachine'
+      region: !Ref 'AWS::Region'
   VaultMachine:
     Type: AWS::EC2::Instance
     Properties:
@@ -258,15 +381,51 @@ Resources:
       AWS::CloudFormation::Init:
         configSets:
           ascending:
-            - configSSMAndServer
+            - configSSMAndServerAndTagKMS
             - configServices
             - configSignal
-        configSSMAndServer:
+        configSSMAndServerAndTagKMS:
           files:
-            C:\CyberArk\Deployment\KMSPolicy.json:
-              content:
-                Fn::Sub: |-
-                  {"Statement": [{"Action": ["kms:Encrypt", "kms:Decrypt"], "Resource": "arn:${AWS::Partition}:kms:${AWS::Region}:${AWS::AccountId}:key/KMSKEYID_PLACEHOLDER", "Effect": "Allow"}]}
+            C:\CyberArk\Deployment\VaultTagKMS.ps1:
+              content: |-
+                [CmdletBinding()]
+                param(
+                  [Parameter(Mandatory = $true)] [string]$Role,
+                  [Parameter(Mandatory = $true)] [string]$Region
+                )
+                
+                . "$PSScriptRoot\Common.ps1"
+                $LogFile = "C:\CyberArk\Deployment\Logs\VaultInit.log"
+                
+                try {
+                  # Retrieve KMS Key ID
+                  WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "Retrieving KMS Key ID"
+                  $DBParmLine = Get-Content -Path "C:\Program Files (x86)\PrivateArk\Server\Conf\dbparm.ini" | Where-Object { $_ -match 'CloudKeyUUID=' }
+                  $KMSKeyID = $DBParmLine.Split('=')[1]
+                  WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "Retrievied KMS Key ID successfully"
+                  
+                  # Get Instance ID
+                  $InstanceId = Invoke-WebRequest http://169.254.169.254/latest/meta-data/instance-id
+                  
+                  # Load AWS powershell assemblies
+                  WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "Loading AWS PowerShell assemblies"
+                  Get-AWSPowerShellVersion | Out-Null
+                  WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "AWS PowerShell assemblies loaded successfully"
+                
+                  # Tag KMS Key with Vault instance id and enable key rotation
+                  WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "trying to tag KMS Key with Vault instance ID and add alias"
+                  $InstanceTag = New-Object Amazon.KeyManagementService.Model.Tag
+                  $InstanceTag.TagKey = "VaultInstance"
+                  $InstanceTag.TagValue = $InstanceId
+                  Add-KMSResourceTag -KeyId $KMSKeyID -Tag $InstanceTag -Force
+                  Update-KMSKeyDescription -KeyId $KMSKeyID -Description "CyberArk Digital Vault KMS Key for Vault Instance $InstanceId" -Force
+                  New-KMSAlias -TargetKeyId $KMSKeyID -AliasName "alias/vault/$InstanceId" -Force
+                  WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "KMS Key tagged successfully"
+                  exit 0
+                } catch {
+                  WriteLog -LogFile $LogFile -LogLevel "ERROR" -Log $_.Exception.Message
+                  exit 1
+                }
           services:
             windows:
               AmazonSSMAgent:
@@ -292,9 +451,9 @@ Resources:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -IsPrimaryOrDR "Primary" -PrimaryVaultIP "1.1.1.1" -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region}
               waitAfterCompletion: 0
-            3-removePermissions:
+            3-changeKMSTag:
               command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\VaultRemoveIAMPolicies.ps1 -Role ${VaultInstancesRole} -Region ${AWS::Region}
+                powershell.exe -File C:\CyberArk\Deployment\VaultTagKMS.ps1 -Role ${VaultInstancesRole} -Region ${AWS::Region}
               waitAfterCompletion: 0
             4-restart:
               command: powershell.exe -Command Restart-Computer
@@ -414,14 +573,6 @@ Resources:
                   - kms:EnableKeyRotation
                   - kms:UpdateKeyDescription
                   - kms:CreateAlias
-                Resource: '*'
-        - PolicyName: VaultBootstrapIAMPolicy
-          PolicyDocument:
-            Statement:
-              - Effect: Allow
-                Action:
-                  - iam:DeleteRolePolicy
-                  - iam:PutRolePolicy
                 Resource: '*'
   InstancesSSMPolicy:
     Type: AWS::IAM::Policy
